--- a/toc.html
+++ b/toc.html
@@ -16,7 +16,7 @@
                     <a href="articles/intro.html" name="articles/toc.html" title="Dokumentacja">Dokumentacja</a>
                 </li>
                 <li>
-                    <a href="api/index.html" name="api/toc.html" title="Dokumentacji API">Dokumentacji API</a>
+                    <a href="api/index.html" name="api/toc.html" title="Dokumentacja API">Dokumentacja API</a>
                 </li>
           </ul>
       </div>
