--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <div class="contribution">
                 <ul class="nav">
                   <li>
-                    <a href="https://dev.azure.com/dawidiaco/PAdam%20Softworks/_git/PAdam%20Softworks?path=Documentation/index.md&amp;version=GBInventory&amp;line=1" class="contribution-link">Improve this Doc</a>
+                    <a href="https://dev.azure.com/dawidiaco/PAdam%20Softworks/_git/PAdam%20Softworks?path=Documentation/index.md&amp;version=GBmaster&amp;line=1" class="contribution-link">Improve this Doc</a>
                   </li>
                 </ul>
               </div>
